--- a/resources/js/styles/index.scss
+++ b/resources/js/styles/index.scss
@@ -1,5 +1,6 @@
 @import '~normalize.css/normalize.css';
 @import '~element-ui/lib/theme-chalk/index.css';
+@import '~element-ui/lib/theme-chalk/display.css';
 @import 'variables';
 @import 'mixin';
 @import 'transition';
